# developer-desktop-utils

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  DOCS_INDEX.md  FEATURES.md  LAYOUT.md  LICENSE  PREMIUM-REDESIGN-SUMMARY.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  README.md  REBASE_VERIFICATION.md  REDESIGN_SUMMARY.md  codecov.yml  docker-compose.consumers.yml  docker-compose.yml  index.html  package-lock.json  package-lock.json.info  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-cache.yml  ci.yml  coverage.yml  release.yml
docs/ai/: ARCHITECTURE.md  CLAUDE.md  DESIGN-CHEATSHEET.md  DESIGN-SYSTEM-QUICK-REF.md  PREMIUM-DESIGN-SYSTEM.md  PREMIUM-MIGRATION-GUIDE.md  UI-UX-REDESIGN.md
docs/design/: DESIGN-SYSTEM.md  DESIGN_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  UX_IMPROVEMENTS.md
docs/human/: BUILD.md  COLOR_PICKER.md  CONTRIBUTING.md  SETUP.md  SIDEBAR.md  TOOLS.md  TROUBLESHOOTING.md  kafka-explorer.md
scripts/: generate-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: checksum.rs  files.rs  kafka.rs  main.rs  mockserver.rs  netinfo.rs  ports.rs  rabbit.rs
src-tauri/tests/: rabbit_it.rs
src/components/: AppLogo.tsx  CopyButton.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingOverlay.tsx  Settings.tsx  StatusMessage.tsx  ToolGuideModal.tsx  ToolHeaderActions.tsx  UpdateDialog.tsx
src/components/meetings/: MeetingDialog.tsx  MeetingFields.tsx
src/components/tools/: ArrayDeduplicator.tsx  Base64Tool.tsx  ChecksumTool.tsx  ColorPicker.tsx  CronGenerator.tsx  DataConverter.tsx  DateTimeTool.tsx  EncodeHashEncrypt.tsx  FakeDataGenerator.tsx  Generator.tsx  GeneratorTool.tsx  HashTool.tsx  ImageBase64Tool.tsx  JsonFormatter.tsx  JwtDebugger.tsx  LuckyWheel.tsx  MarkdownPreview.tsx  MeetingNotes.tsx  NetworkTools.tsx  PasswordHash.tsx  PipelineTab.tsx  QRCodeTool.tsx  README.md  RandomGenerator.tsx  RegexTester.tsx  SqlFormatter.tsx  TaskTracker.tsx  TextCounter.tsx  TextDiff.tsx  TextTransformer.tsx  TwoFactorAuth.tsx  UnixTimeConverter.tsx  UrlTool.tsx  UuidGenerator.tsx
src/components/tools/apiclient/: AddressBar.tsx  ApiClient.tsx  AuthEditor.tsx  CodeEditor.tsx  CookieManager.tsx  EnvironmentEditor.tsx  GenerateCodeDialog.tsx  HistoryView.tsx  ImportCurlDialog.tsx  KeyValueEditor.tsx  MultipartEditor.tsx  NodeSettingsDialog.tsx  RequestPanel.tsx  RequestTabs.tsx  ResponsePanel.tsx  ResponseViewer.tsx  ResponsiveTabBar.tsx  RunnerDialog.tsx  Sidebar.tsx  SplitPane.tsx  StatusBar.tsx  TopBar.tsx  VarInput.tsx  codegen.ts  (+15 more)
src/components/ui/: button.tsx  card.tsx  color-picker.tsx  copy-button.tsx  date-picker.tsx  date-time-panel.tsx  date-time-picker.tsx  dialog.tsx  drop-zone.tsx  empty-state.tsx  input.tsx  premium.tsx  segmented.tsx  select.tsx  switch.tsx  textarea.tsx  time-picker.tsx  tool-layout.tsx  tool-section.tsx  tooltip.tsx  view-header.tsx
src/config/: appConfig.ts
src/contexts/: AppConfigContext.tsx  FeatureContext.tsx  UpdateContext.tsx
src/design-system/: README.md  index.ts  tailwind-preset.cjs  tokens.css
src/hooks/: useCopyFeedback.ts  useDesktopChrome.ts  useDismissable.ts  useImagePaste.ts  useInputHistory.ts  usePersistentState.ts  useQuickPaste.ts  useTauriFileDrop.ts  useUpdater.ts
src/lib/: clipboard.ts  faker.ts  liveConnections.ts  meetings.tsx  network.ts  otpauth.ts  properties.ts  toolDefs.ts  toolGuides.tsx  utils.ts
src/styles/: globals.css
src/workers/: checksum.worker.ts  deduplicate.worker.ts  regex.worker.ts
testing/kafka/: Dockerfile  README.md  common.py  consumer.py  docker-compose.yml  producer.py
testing/rabbitmq/: Dockerfile  README.md  common.py  consumer.py  definitions.json  docker-compose.yml  fanout_publisher.py  producer.py  rabbitmq.conf  rpc_client.py  rpc_server.py  topic_publisher.py
testing/rabbitmq/spring-rpc/: Dockerfile  pom.xml
(+68 files in other folders)
