[package]
name = "devtool"
version = "0.1.0"
description = "Developer Utilities Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
digest = "0.10"
rskafka = { version = "0.6", features = ["transport-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri-plugin-opener = "2.5.4"
local-ip-address = "0.6"
hostname = "0.4"
netstat2 = "0.11"
sysinfo = "0.32"
axum = "0.8"
rhai = "1"
regex = "1"
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
futures-util = "0.3"
percent-encoding = "2"
base64 = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
